# skbel

./: .gitattributes  .gitignore  .readthedocs.yml  .travis.yaml  .travis.yml  CITATION.cff  CONTRIBUTING.md  FUNDING.yml  LICENSE  MANIFEST.in  README.md  README.rst  codecov.yml  pyproject.toml  pytest.ini  requirements.txt  setup.py
.github/workflows/: ci.yml  coverage.yml
docs/: conf.py  examples.rst  export.bib  index.rst  modules.rst  requirements.txt  skbel.algorithms.rst  skbel.goggles.rst  skbel.learning.rst  skbel.preprocessing.rst  skbel.spatial.rst  skbel.testing.rst  skbel.tmaps.rst  skbel.utils.rst
docs/examples/: demo.ipynb  demo_config.py  demo_visualization.py  transport_maps.py  whpa_demo.py
docs/examples/dataset/: y_test.npy  y_test.pkl
docs/source/: conf.py  demo_config.rst  demo_copy.rst  demo_visualization.rst  examples.rst  index.rst  modules.rst  skbel.algorithms.rst  skbel.examples.rst  skbel.goggles.rst  skbel.learning.rst  skbel.preprocessing.rst  skbel.rst  skbel.spatial.rst  skbel.testing.rst  skbel.tmaps.rst  skbel.utils.rst  skbel_stable.rst
examples/: demo.ipynb  demo.py  demo_config.py  demo_copy.py  demo_visualization.py  whpa_bnn.py  whpa_demo.py  whpa_demo_copy.py  whpa_kernel.py
examples/dataset/: X_test.npy  X_train.npy  X_train.pkl
scripts/: regenerate_test_references.py
skbel/: __init__.py  utils.py
skbel/algorithms/: __init__.py  _pfa.py  _statistics.py  extmath.py  metrics.py  statistics.py
skbel/bnn/: models.py
skbel/develop/: example_01.py
skbel/docstring/: formatter.py
skbel/examples/: demo.ipynb  demo.py  demo_config.py  demo_kde.py  demo_kde_cheby.py  demo_visualization.py
skbel/examples/dataset/: X_test.pkl
skbel/goggles/: __init__.py  _visualization.py  visualization.py
skbel/learning/: __init__.py  bel.py  kcca.py
skbel/nn_utilities/: functions.py
skbel/optimization/: functions.py
skbel/preprocessing/: __init__.py  composite.py  composite_pca.py  dct.py  dimension_reduction.py  kernel.py
skbel/probabilities/: functions.py
skbel/spatial/: __init__.py  _spatial.py  spatial.py
skbel/testing/: X_test.npy  X_train.npy  ref_covariance.npy  ref_mean.npy  test_basic.py  tests.py  transport_maps.py  x_star_tm.npy  y_samples_kde.npy
skbel/tmaps/: __init__.py  transport_map.py  transport_map_124.py
skbel/transport_maps/: transport_map_124.py
skbel/utils/: utils.py
